--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ body {
   transform: translate(-50%, -50%);
   background: rgba(235, 235, 235, 0.116);
   box-shadow: 1px 1px 15px 3px rgba(0, 0, 0, 0.199);
-  padding: 10px;
+  padding: 50px;
   color: white;
   border-radius: 10px;
 }
@@ -82,6 +82,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  position: relative;
+  top: -50px;
 }
 #city {
   padding: 10px;
